--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,9 +9,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600');
 
 /*
-	Industrious by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+	Bytes And Chips Template.
+	Released for free under the Creative Commons Attribution 3.0 license 
 */
 
 // Breakpoints.
